# Multi-Vector-2026

./: README.md  pyproject.toml
scripts/: final_audit.py  run_demo.py
tests/: test_audit.py  test_engine.py  test_index.py
xtrust/: __init__.py  audit.py  engine.py  index.py  planner.py  quantization.py  signature.py  vector_utils.py
